# monnaie

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
monnaie/: Cargo.toml  main.rs  wallet.rs
monnaie-rpc/: Cargo.toml  lib.rs  wallet.rs
monnaie-rpc/tests/wallet/: main.rs
monnaie-rpc/wallet/: params.rs  response.rs  types.rs
monnaie-wrapper/: Cargo.toml  lib.rs  remote_procedure_call.rs  wallet.rs
monnaie-wrapper/tests/wallet/: helpers.rs  main.rs
monnaie-wrapper/wallet/: models.rs  params.rs  response.rs  result.rs  types.rs
monnaie/wallet/: params.rs  response.rs  types.rs
