[package]
name = "monnaie-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
jsonrpsee = { version = "0.15", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
