[package]
name = "monnaie-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
jsonrpsee = { version = "0.15", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "1"

[dev-dependencies]
lazy_static = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
