[package]
name = "monnaie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "monnaie"
path = "main.rs"

[dependencies]
monnaie-wrapper = { version = "0.1", path = "../monnaie-wrapper" }
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.15", features = ["full"] }
clap = "4"
